WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201505
[GTK] Cannot create EGL window surface: EGL_BAD_ALLOC
https://bugs.webkit.org/show_bug.cgi?id=201505
Summary
[GTK] Cannot create EGL window surface: EGL_BAD_ALLOC
Cédric Bellegarde
Reported
2019-09-05 05:01:57 PDT
version: webkit2gtk3-2.25.92-2.fc31.x86_64 What is happening? A blank page in Web view and this message "Cannot create EGL window surface: EGL_BAD_ALLOC" Happens in all application with HW acceleration on (Devhelp for example).
Attachments
Patch
(1.79 KB, patch)
2019-09-17 02:50 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cédric Bellegarde
Comment 1
2019-09-14 14:51:28 PDT
Does not happen on ArchLinux so looks like a Fedora 31 only issue.
Guilaume Ayoub
Comment 2
2019-09-16 10:00:13 PDT
This bug also happens on my Gentoo system using Epiphany, when using HW acceleration. It's not a Fedora-only issue.
Cédric Bellegarde
Comment 3
2019-09-16 10:13:10 PDT
Ok, so reopening...
Guilaume Ayoub
Comment 4
2019-09-16 12:42:15 PDT
The bug happens with Mesa 19.2.0-rc2, but not with 19.1.6. That's why it happens on Fedora and Gentoo, not on ArchLinux.
Carlos Garcia Campos
Comment 5
2019-09-17 02:45:54 PDT
Ok, this is because mesa now fails if eglCreateWindowSurface() is called twice for the same window/pixman. And WebKit is doing that when not using the wpe renderer due to a bug.
Carlos Garcia Campos
Comment 6
2019-09-17 02:50:18 PDT
Created
attachment 378953
[details]
Patch
Carlos Garcia Campos
Comment 7
2019-09-17 03:12:32 PDT
Committed
r249951
: <
https://trac.webkit.org/changeset/249951
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug